# keynalysis

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: app.rc  main.cpp  resource.h
